@@ -2,6 +2,9 @@ Non-version-specific:
 * More tests
 * Documentation
 
+For 0.2.2:
+* User-accessible condition system
+
 For 0.2.3:
 * Better format
 * Better writer (callback based, with support for circularity and sharing)
